--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "dotenv": "^16.0.3",
     "json-loader": "^0.5.7",
     "mathjs": "^11.8.0",
     "react": "^18.2.0",
